# ViZDoom

./: CMakeLists.txt  run_cmake.sh
dteano/: CMakeLists.txt  biasedconvolutionnnlayer.cu  biasedconvolutionnnlayer.h  biasedfullyconnectednnlayer.cu  biasedfullyconnectednnlayer.h  common.h  cuda.cmake  cudacontext.cu  cudacontext.h  cudacontext_test.cpp  cudainit.cu  cudainit.h  cudainit_test.cu  main.cpp  neurallayer.h  neuralnetwork.cpp  neuralnetwork.h  neuralnetwork_test.cpp
examples/c++/: CMakeLists.txt
examples/python/: bots.cfg
vizdoom_api_src/: ViZDoomController.cpp
